adição de validação nos formularios de cadastro de usuario e login, e conserto do container backend-image

--- a/web/grupo-2/views/index.html
+++ b/web/grupo-2/views/index.html
@@ -151,12 +151,12 @@
                                         <span class="input-group-text flex-nowrap" id="iconeLink">
                                             <i class="fa-regular fa-file"></i>
                                         </span>
-                                        <input type="text" id="cpfCadastroInput" class="form-control" placeholder="Digite seu CPF">
+                                        <input type="text" id="cpfCadastroInput" class="form-control" placeholder="Digite seu CPF (012.345.678-90)">
                                     </div>
                                 </div>
                                 <div class="form-item">
                                     <label for="usuarioCadastroInput">
-                                        Usuário
+                                        Usuário (nome que aparecerá para outros usuários)
                                     </label>
                                     <div class="input-group">
                                         <span class="input-group-text flex-nowrap" id="iconeLink">
@@ -198,6 +198,7 @@
                                         <input type="password" id="senhaCadastroInput" class="form-control" placeholder="Digite sua senha">
                                     </div>
                                 </div>
+                                A senha ter no mínimo 8 caracteres, e deve conter: <br> 1 letra maiúscula <br> 1 letra minúscula <br> 1 número <br> 1 caracter especial
                                 <div class="alert" id="alert-cadastro" role="alert" style="display: none"></div>
                             </form>
                         </div>
