Sincronização com repositório original

--- a/web/grupo-2/views/cadastro-evento.html
+++ b/web/grupo-2/views/cadastro-evento.html
@@ -231,10 +231,10 @@
                     <div class="form-item">
                         <label>
                             <span>Banner</span>
-                            <span>Insira a url da imagem do seu banner (opcional)</span>
+                            <span>Insira o arquivo da imagem do seu banner (opcional)</span>
                         </label>
                         <div class="input-group">
-                            <input type="text" placeholder="Digite o caminho do banner" class="form-control" id="urlBannerInput">
+                            <input type="file" placeholder="envie a imagem do seu evento" class="form-control" id="image">
                         </div>
                     </div>
                     
@@ -252,11 +252,6 @@
                                 <i class="fi fi-rr-calendar"></i>
                             </span>
                             <input type="date" class="form-control" id="dataInicioInput" placeholder="Data de início" required>
-                        </div>
-                    </div>
-                    <div class="form-item">
-                        <div class="recorrente">
-                            <input type="checkbox" name="Recorrente" placeholder="Recorrente"/> Recorrente
                         </div>
                     </div>
                     <div class="form-item">
@@ -355,7 +350,7 @@
                     <div class="form-item">
                         <label>Complemento</label>
                         <div class="input-group">
-                            <input type="text" placeholder="Digite o Complemento do endereço" class="form-control" id="complementoInput" required>
+                            <input type="text" placeholder="Digite o Complemento do endereço" class="form-control" id="complementoInput">
                         </div>
                     </div>
                     <div class="form-item">
