--- a/web/grupo-2/views/cadastro-evento.html
+++ b/web/grupo-2/views/cadastro-evento.html
@@ -205,27 +205,29 @@
                 </div>
             </div>
         </header>
-
-        <main>
-            
+        <!-- FIM MODAL-->
+        
+        <main>       
             <div class="form-container">
-                <form class="form">
+                <form class="form" method="POST" action="http://localhost:3002/" enctype="multipart/form-data">
                     <div class="alert" role="alert" id="alert-evento" style="display: none;">
                     </div>
                     <div class="secao-form">
                         <h5>Dados do evento</h5>
                         <span>Insira os dados relativos ao seu evento</span>
                     </div>
+                    <input type="text" name="usuario" id="usuario" style="display: none">
+                    <script>document.getElementById("usuario").value = JSON.stringify(JSON.parse(localStorage.getItem("Usuario"))._id)</script>
                     <div class="form-item">
                         <label>Nome do evento *</label>
                         <div class="input-group">
-                            <input type="text" placeholder="Digite o nome do evento" class="form-control" id="nomeInput" required>
+                            <input type="text" placeholder="Digite o nome do evento" class="form-control" name="nome" id="nomeInput" value="a" required>
                         </div>
                     </div>
                     <div class="form-item input-group">
                         <label>Descrição *</label>
                         <div class="input-group">
-                            <textarea type="text" placeholder="Digite a descrição do evento" class="form-control" id="descricaoInput" required></textarea>
+                            <textarea type="text" placeholder="Digite a descrição do evento" class="form-control" name="descricao" id="descricaoInput" required> aa</textarea>
                         </div>
                     </div>
                     <div class="form-item">
@@ -234,7 +236,7 @@
                             <span>Insira o arquivo da imagem do seu banner (opcional)</span>
                         </label>
                         <div class="input-group">
-                            <input type="file" placeholder="envie a imagem do seu evento" class="form-control" id="image">
+                            <input type="file" placeholder="envie a imagem do seu evento" class="form-control" name="image" id="imageInput">
                         </div>
                     </div>
                     
@@ -251,7 +253,7 @@
                             <span class="input-group-text flex-nowrap" id="iconeLink">
                                 <i class="fi fi-rr-calendar"></i>
                             </span>
-                            <input type="date" class="form-control" id="dataInicioInput" placeholder="Data de início" required>
+                            <input type="date" class="form-control" id="dataInicioInput" name="dataInicio" placeholder="Data de início" value="2025-04-01" required>
                         </div>
                     </div>
                     <div class="form-item">
@@ -263,19 +265,19 @@
                             <span class="input-group-text flex-nowrap" id="iconeLink">
                                 <i class="fi fi-rr-calendar"></i>
                             </span>
-                            <input type="date" class="form-control" id="dataFimInput" placeholder="Data de término">
+                            <input type="date" class="form-control" id="dataFimInput" name="dataFim" placeholder="Data de término" value="2025-04-01">
                         </div>
                     </div>
                     <div class="form-item">
                         <label>Horário de início *</label>
                         <div class="input-group">
-                            <input type="time" class="form-control" id="horarioInicioInput" placeholder="Horário de início" required>
+                            <input type="time" class="form-control" id="horarioInicioInput" name="horarioInicio" placeholder="Horário de início" value="10:00" required>
                         </div>
                     </div>
                     <div class="form-item">
                         <label>Horário de fim *</label>
                         <div class="input-group">
-                            <input type="time" class="form-control" id="horarioFimInput" placeholder="Horário de término" required>
+                            <input type="time" class="form-control" id="horarioFimInput" name="horarioFim" placeholder="Horário de término" value="10:00" required>
                         </div>
                     </div>
                     <div class="secao-form">
@@ -291,7 +293,7 @@
                             <span class="input-group-text flex-nowrap" id="iconeLink">
                                 <i class="fi fi-rr-coins"></i>
                             </span>
-                            <input type="number" placeholder="Digite o valor dos ingressos" class="form-control" id="valorInput">
+                            <input type="number" placeholder="Digite o valor dos ingressos" name="valor" class="form-control" value=1 id="valorInput">
                         </div>
                     </div>
                     <div class="form-item">
@@ -304,7 +306,7 @@
                             <span class="input-group-text flex-nowrap" id="iconeLink">
                                 <i class="fi fi-rr-link-alt"></i>
                             </span>
-                            <input type="text" placeholder="Digite o link dos ingressos" class="form-control" id="urlIngressoInput">
+                            <input type="text" placeholder="Digite o link dos ingressos" class="form-control" id="urlIngressoInput" name="urlIngresso" value="a">
                         </div>
                     </div>
                     <div class="secao-form">
@@ -314,43 +316,43 @@
                     <div class="form-item">
                         <label>Rua *</label>
                         <div class="input-group">
-                            <input type="text" placeholder="Digite a rua do endereço" class="form-control" id="ruaInput" required>
+                            <input type="text" placeholder="Digite a rua do endereço" class="form-control" id="ruaInput" name="rua" value="a" required>
                         </div>
                     </div>
                     <div class="form-item">
                         <label>Número *</label>
                         <div class="input-group">
-                            <input type="number" placeholder="Digite o número do endereço" class="form-control" id="numeroInput" required>
+                            <input type="number" placeholder="Digite o número do endereço" class="form-control" id="numeroInput" name="numero" value=1 required>
                         </div>
                     </div>
                     <div class="form-item">
                         <label>Bairro *</label>
                         <div class="input-group">
-                            <input type="text" placeholder="Digite o bairro do endereço" class="form-control" id="bairroInput" required>
+                            <input type="text" placeholder="Digite o bairro do endereço" class="form-control" id="bairroInput" name="bairro" value="a" required>
                         </div>
                     </div>
                     <div class="form-item">
                         <label>Estado *</label>
                         <div class="input-group">
-                            <input type="text" placeholder="Digite o estado do endereço" class="form-control" id="estadoInput" required>
+                            <input type="text" placeholder="Digite o estado do endereço" class="form-control" id="estadoInput" name="estado" value="a" required>
                         </div>
                     </div>
                     <div class="form-item">
                         <label>Cidade *</label>
                         <div class="input-group">
-                            <input type="text" placeholder="Digite a cidade" class="form-control" id="cidadeInput" required>
+                            <input type="text" placeholder="Digite a cidade" class="form-control" id="cidadeInput" name="cidade" value="a" required>
                         </div>
                     </div>
                     <div class="form-item">
                         <label>CEP *</label>
                         <div class="input-group">
-                            <input type="text" placeholder="Digite o CEP do endereço" class="form-control" id="cepInput" required>
+                            <input type="text" placeholder="Digite o CEP do endereço" class="form-control" id="cepInput" name="cep" value="a" required>
                         </div>
                     </div>
                     <div class="form-item">
                         <label>Complemento</label>
                         <div class="input-group">
-                            <input type="text" placeholder="Digite o Complemento do endereço" class="form-control" id="complementoInput">
+                            <input type="text" placeholder="Digite o Complemento do endereço" class="form-control" name="complemento" id="complementoInput">
                         </div>
                     </div>
                     <div class="form-item">
@@ -358,7 +360,7 @@
                         <div class="categorias">
                             <select name="select" class="form-select" id="categoriaInput">
                                 <option value="Nenhuma">Nenhuma</option>
-                                <option value="Educativo">Educativo</option>
+                                <option selected value="Educativo">Educativo</option>
                                 <option value="Show">Show</option>
                                 <option value="Esportes">Esportes</option>
                                 <option value="Bazar">Bazar</option>
@@ -368,7 +370,7 @@
                         </div>
                     </div>
                     <span>Os campos com "*" são obrigatórios</span>
-                    <button type="submit" class="btn btn-success" onclick="cadastrarEvento()">Cadastrar</button>
+                    <input type="submit" class="btn btn-success" value="Cadastrar">
                 </form>
             </div>
         </main>
