--- a/web/grupo-2/views/evento.html
+++ b/web/grupo-2/views/evento.html
@@ -207,7 +207,13 @@
         <div class="evento">
             <div class="row evento__image">
                 <figure>
-                    <img src="img/capa-evento.png" alt="Banner">
+                    <% items.forEach(function(image) { %>
+                    <img
+                        src="data:image/<%=image.img.contentType%>;base64,
+                        <%=image.img.data%>"
+                        alt="<%=image.desc%>"
+                    />
+                    <% }) %>
                 </figure>
             </div>
 
