--- a/web/grupo-2/views/index.html
+++ b/web/grupo-2/views/index.html
@@ -22,7 +22,7 @@
     <!--icons-->
     <script src="https://kit.fontawesome.com/e2a2c1e4a6.js" crossorigin="anonymous"></script>
 </head>
-<body onload="buscarEventos()">
+<body>
     <div class="container-content">
         <header class="header">
             <nav class="header__menu navbar navbar-expand-lg navbar-dark">
